--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consolestylerc",
-  "version": "0.0.2-rc2",
+  "version": "0.0.5",
   "description": "console rc style",
   "main": "index.js",
   "scripts": {
@@ -11,18 +11,13 @@
     "url": "https://github.com/Soldy/consolestylerc.git"
   },
   "keywords": [],
-  "author": "Soldy",
+  "author": "Soldy <npmjs@gidigi.com> (http://gidigi.com)",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/Soldy/consolestylerc/issues"
   },
   "homepage": "https://github.com/Soldy/consolestylerc#readme",
   "devDependencies": {
-    "assertrc": "^1.0.2-rc2",
-    "nano-test-output-cli": "^0.9.9-beta15",
-    "nanoTest": "^0.9.9-beta15",
-    "sandboxrc": "^0.9.9-beta11",
-    "setuprc": "^0.9.9-beta14",
-    "typehardeningrc": "^0.9.9-beta11"
+    "nanoTest": "^0.9.9-beta32"
   }
 }
